--- a/ipynb/DATA606_Part_01.ipynb
+++ b/ipynb/DATA606_Part_01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DATA606 Part - 01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOy/FOG6mePTVQSaC1yJjyV",
+      "authorship_tag": "ABX9TyNza5eXxnUEuhK/n05Xxj5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,11 @@
         "## Author : Srikeerthi Upperla \n",
         "\n",
         "This is the first part of the capstone project. This part focuses mostly on DATA loading and cleansing\n",
+        "\n",
+        "# Data Source \n",
+        "\n",
+        "- Kaggle \n",
+        "- IEEE \n",
         "\n"
       ]
     },
